// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test WaterQualityGuide render WaterQuality without showBoxHistory 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E8E8E8",
        "borderRadius": 20,
        "borderWidth": 1,
        "marginBottom": 16,
        "paddingBottom": 24,
        "paddingHorizontal": 16,
        "paddingTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "marginTop": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "SFProDisplay-Semibold",
            "fontSize": undefined,
            "lineHeight": undefined,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {
            "color": "#262626",
            "fontSize": 20,
          },
        ]
      }
    >
      Hôm nay, 24th January
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": undefined,
          "lineHeight": undefined,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "fontSize": 12,
          "lineHeight": 20,
          "marginBottom": 20,
        },
      ]
    }
  >
    Chất lượng nước tổng thể được dựa trên những thông số dưới đây
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 5,
          "elevation": 5,
          "marginBottom": 16,
          "padding": 16,
          "shadowColor": "#303133",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "width": 351,
        }
      }
    >
      <View
        color="#595959"
        size={14}
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": undefined,
                "lineHeight": undefined,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Độ đục
        </Text>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "antoutline",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </RNGestureHandlerButton>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 24,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "marginBottom": 8,
            },
          ]
        }
      >
        1
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#595959",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 12,
              "lineHeight": 12,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 8,
            "top": 8,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": undefined,
                "lineHeight": undefined,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 5,
          "elevation": 5,
          "marginBottom": 16,
          "padding": 16,
          "shadowColor": "#303133",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "width": 351,
        }
      }
    >
      <View
        color="#595959"
        size={14}
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": undefined,
                "lineHeight": undefined,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          pH
        </Text>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "antoutline",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </RNGestureHandlerButton>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 24,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "marginBottom": 8,
            },
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#595959",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 12,
              "lineHeight": 12,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      />
      <View
        style={
          Object {
            "position": "absolute",
            "right": 8,
            "top": 8,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": undefined,
                "lineHeight": undefined,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 5,
          "elevation": 5,
          "marginBottom": 16,
          "padding": 16,
          "shadowColor": "#303133",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "width": 351,
        }
      }
    >
      <View
        color="#595959"
        size={14}
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": undefined,
                "lineHeight": undefined,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Clo dư
        </Text>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "antoutline",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </RNGestureHandlerButton>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 24,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "marginBottom": 8,
            },
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#595959",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 12,
              "lineHeight": 12,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      />
      <View
        style={
          Object {
            "position": "absolute",
            "right": 8,
            "top": 8,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": undefined,
                "lineHeight": undefined,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 5,
          "elevation": 5,
          "marginBottom": 16,
          "padding": 16,
          "shadowColor": "#303133",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "width": 351,
        }
      }
    >
      <View
        color="#595959"
        size={14}
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": undefined,
                "lineHeight": undefined,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Nhiệt độ
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#262626",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 24,
              "lineHeight": 24,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "marginBottom": 8,
            },
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#595959",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": 12,
              "lineHeight": 12,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 8,
            "top": 8,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": undefined,
                "lineHeight": undefined,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test WaterQualityGuide render WaterQualityGuide 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E8E8E8",
          "borderRadius": 20,
          "borderWidth": 1,
          "marginBottom": 16,
          "paddingBottom": 24,
          "paddingHorizontal": 16,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "marginTop": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "SFProDisplay-Semibold",
              "fontSize": undefined,
              "lineHeight": undefined,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "color": "#262626",
              "fontSize": 20,
            },
          ]
        }
      >
        Hôm nay, 24th January
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": undefined,
            "lineHeight": undefined,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {
            "fontSize": 12,
            "lineHeight": 20,
            "marginBottom": 20,
          },
        ]
      }
    >
      Chất lượng nước tổng thể được dựa trên những thông số dưới đây
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 5,
            "marginBottom": 16,
            "padding": 16,
            "shadowColor": "#303133",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "width": 351,
          }
        }
      >
        <View
          color="#595959"
          size={14}
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": undefined,
                  "lineHeight": undefined,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            Độ đục
          </Text>
          <RNGestureHandlerButton
            collapsable={false}
            onGestureEvent={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            onHandlerStateChange={[Function]}
            rippleColor={0}
          >
            <View
              accessible={true}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "antoutline",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </RNGestureHandlerButton>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 24,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginBottom": 8,
              },
            ]
          }
        >
          1
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#595959",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 12,
                "lineHeight": 12,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <View
          style={
            Object {
              "position": "absolute",
              "right": 8,
              "top": 8,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": undefined,
                  "lineHeight": undefined,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 5,
            "marginBottom": 16,
            "padding": 16,
            "shadowColor": "#303133",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "width": 351,
          }
        }
      >
        <View
          color="#595959"
          size={14}
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": undefined,
                  "lineHeight": undefined,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            pH
          </Text>
          <RNGestureHandlerButton
            collapsable={false}
            onGestureEvent={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            onHandlerStateChange={[Function]}
            rippleColor={0}
          >
            <View
              accessible={true}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "antoutline",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </RNGestureHandlerButton>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 24,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginBottom": 8,
              },
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#595959",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 12,
                "lineHeight": 12,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        />
        <View
          style={
            Object {
              "position": "absolute",
              "right": 8,
              "top": 8,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": undefined,
                  "lineHeight": undefined,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 5,
            "marginBottom": 16,
            "padding": 16,
            "shadowColor": "#303133",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "width": 351,
          }
        }
      >
        <View
          color="#595959"
          size={14}
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": undefined,
                  "lineHeight": undefined,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            Clo dư
          </Text>
          <RNGestureHandlerButton
            collapsable={false}
            onGestureEvent={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            onHandlerStateChange={[Function]}
            rippleColor={0}
          >
            <View
              accessible={true}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "antoutline",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </RNGestureHandlerButton>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 24,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginBottom": 8,
              },
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#595959",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 12,
                "lineHeight": 12,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        />
        <View
          style={
            Object {
              "position": "absolute",
              "right": 8,
              "top": 8,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": undefined,
                  "lineHeight": undefined,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 5,
            "marginBottom": 16,
            "padding": 16,
            "shadowColor": "#303133",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "width": 351,
          }
        }
      >
        <View
          color="#595959"
          size={14}
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 16,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": undefined,
                  "lineHeight": undefined,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            Nhiệt độ
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 24,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginBottom": 8,
              },
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#595959",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 12,
                "lineHeight": 12,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <View
          style={
            Object {
              "position": "absolute",
              "right": 8,
              "top": 8,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": undefined,
                  "lineHeight": undefined,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E8E8E8",
          "borderRadius": 20,
          "borderWidth": 1,
          "marginBottom": 16,
          "paddingBottom": 24,
          "paddingHorizontal": 16,
          "paddingTop": 8,
        },
        undefined,
      ]
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 20,
                "lineHeight": 20,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Lịch sử
        </Text>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginTop": 16,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#8C8C8C",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 12,
                  "lineHeight": 12,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            từ
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderColor": "#D9D9D9",
                "borderRadius": 2,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginHorizontal": 8,
                "opacity": 1,
                "paddingLeft": 12,
                "paddingRight": 8,
                "paddingVertical": 8,
                "width": 124,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#595959",
                    "fontFamily": "SFProDisplay-Regular",
                    "fontSize": 12,
                    "lineHeight": 20,
                    "textAlign": "left",
                    "textDecorationLine": "none",
                  },
                  Object {
                    "marginRight": 4,
                  },
                ]
              }
            >
              23.01.21 12:00
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#595959",
                    "fontFamily": "antfill",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#8C8C8C",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 12,
                  "lineHeight": 12,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            đến
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderColor": "#D9D9D9",
                "borderRadius": 2,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginHorizontal": 8,
                "opacity": 1,
                "paddingLeft": 12,
                "paddingRight": 8,
                "paddingVertical": 8,
                "width": 124,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#595959",
                    "fontFamily": "SFProDisplay-Regular",
                    "fontSize": 12,
                    "lineHeight": 20,
                    "textAlign": "left",
                    "textDecorationLine": "none",
                  },
                  Object {
                    "marginRight": 4,
                  },
                ]
              }
            >
              24.01.21 12:00
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#595959",
                    "fontFamily": "antfill",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginLeft": -8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 300,
              },
              Object {
                "width": 750,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "justifyContent": "center",
                "marginRight": 24,
                "marginTop": 24,
              }
            }
          >
            <View />
          </View>
        </View>
      </View>
      <Modal
        animationType="none"
        hardwareAccelerated={false}
        isVisible={false}
        onHide={[Function]}
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "bottom": 0,
              "height": 1334,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        />
      </Modal>
      <Modal
        animationType="none"
        hardwareAccelerated={false}
        isVisible={false}
        onHide={[Function]}
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "bottom": 0,
              "height": 1334,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        />
      </Modal>
    </View>
  </View>,
]
`;
